--- a/Crunchyroll Unblocker/popup.html
+++ b/Crunchyroll Unblocker/popup.html
@@ -31,9 +31,10 @@
       <select name="region" id="region">
         <option value="local">Local</option>
         <option value="us">US</option>
+        <option value="fr">France</option>
       </select>
       <p>
-        <input id="save" type="submit" value="Save Settings" />
+        <input id="save" type="submit" value="Apply Settings" />
       </p>
     </form>
   </body>
